unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Absence_Rejected_Comments__c.field-meta.xml
<CustomField>
    <fullName>Absence_Rejected_Comments__c</fullName>
    <label>Absence Rejected Comments</label>
    <type>TextArea</type>
</CustomField>