unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Absence_Rejected_Flag__c.field-meta.xml
<CustomField>
    <fullName>Absence_Rejected_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Absence Rejected Flag</label>
    <type>Checkbox</type>
</CustomField>