unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <description>Date the Timecard was approved.</description>
    <label>Approved Date</label>
    <type>DateTime</type>
</CustomField>