unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Assigned_Approver__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Current primary assigned user</inlineHelpText>
    <label>Assigned Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Timecard_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>