unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Combined_Notes__c.field-meta.xml
<CustomField>
    <fullName>Combined_Notes__c</fullName>
    <label>Combined Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>