unpackaged/main/default/objects/pse__Timecard_Header__c/fields/CPS_Project_Override_Approver__c.field-meta.xml
<CustomField>
    <fullName>CPS_Project_Override_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds the value of the 'Timecard Approver' field against the Parent Project, acting as a an approver override if specified at Project Level. Used as read only for end users within the system.</description>
    <label>Project Override Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Timecards</relationshipName>
    <type>Lookup</type>
</CustomField>