unpackaged/main/default/objects/pse__Timecard_Header__c/fields/CPS_Resource_s_Reports_To_Approver__c.field-meta.xml
<CustomField>
    <fullName>CPS_Resource_s_Reports_To_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds the Resources &gt; Reports To &gt; User, acting as an alternative 'manager' to that defined within the Salesforce User record directly. Used as read only for end users within the system. Populated by flow.</description>
    <label>Resource's 'Reports To' Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Timecards1</relationshipName>
    <type>Lookup</type>
</CustomField>