unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Distance_Thursday__c.field-meta.xml
<CustomField>
    <fullName>Distance_Thursday__c</fullName>
    <label>Distance - Thursday</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>