unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>