unpackaged/main/default/objects/pse__Timecard_Header__c/fields/KM_Miles__c.field-meta.xml
<CustomField>
    <fullName>KM_Miles__c</fullName>
    <label>KM / Miles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kilometres</fullName>
            </value>
            <value>
                <fullName>Miles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>