unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <inlineHelpText>The location of where the work is delivered.</inlineHelpText>
    <label>Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-site</fullName>
            </value>
            <value>
                <fullName>Off-site</fullName>
                <default>true</default>
                <label>Off-site</label>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>