unpackaged/main/default/objects/pse__Timecard_Header__c/fields/MyApprovals__c.field-meta.xml
<CustomField>
    <fullName>MyApprovals__c</fullName>
    <formula>pse__Project__r.pse__Project_Manager__r.pse__Salesforce_User__c  =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MyApprovals</label>
    <type>Checkbox</type>
</CustomField>