unpackaged/main/default/objects/pse__Timecard_Header__c/fields/MyRegion__c.field-meta.xml
<CustomField>
    <fullName>MyRegion__c</fullName>
    <formula>CONTAINS( pse__Resource__r.pse__Region__r.pse__Region_ID_Chain__c, $User.PSA_Region_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MyRegion</label>
    <type>Checkbox</type>
</CustomField>