unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Overtime__c.field-meta.xml
<CustomField>
    <fullName>Overtime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to show if time associated with Timecard is considered Overtime, therefore resulting in a multiplied bill rate</description>
    <label>Overtime</label>
    <type>Checkbox</type>
</CustomField>