unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Overtime_Monday__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Monday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overtime - Monday</label>
    <type>Checkbox</type>
</CustomField>