unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Overtime_Tuesday__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Tuesday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overtime - Tuesday</label>
    <type>Checkbox</type>
</CustomField>