unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Per_Diem_Friday__c.field-meta.xml
<CustomField>
    <fullName>Per_Diem_Friday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Per Diem - Friday</label>
    <type>Checkbox</type>
</CustomField>