unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Per_Diem_Thursday__c.field-meta.xml
<CustomField>
    <fullName>Per_Diem_Thursday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Per Diem - Thursday</label>
    <type>Checkbox</type>
</CustomField>