unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Project_Manager_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Current_User__c</fullName>
    <formula>$User.Id =  pse__Project__r.pse__Project_Manager__r.pse__Salesforce_User__c</formula>
    <label>Project Manager Current User</label>
    <type>Checkbox</type>
</CustomField>