unpackaged/main/default/objects/pse__Timecard_Header__c/fields/pse__Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>pse__Bill_Rate__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Bill Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>