unpackaged/main/default/objects/pse__Timecard_Header__c/fields/pse__Cost_Rate_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>pse__Cost_Rate_Currency_Code__c</fullName>
    <label>Cost Rate Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>