unpackaged/main/default/objects/pse__Timecard_Header__c/fields/pse__Dated_Bill_Rates_Apply__c.field-meta.xml
<CustomField>
    <fullName>pse__Dated_Bill_Rates_Apply__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reserved for future use.</description>
    <inlineHelpText>Reserved for future use.</inlineHelpText>
    <label>Dated Bill Rates Apply</label>
    <type>Checkbox</type>
</CustomField>