unpackaged/main/default/objects/pse__Timecard_Header__c/fields/pse__Days_Worked_Override__c.field-meta.xml
<CustomField>
    <fullName>pse__Days_Worked_Override__c</fullName>
    <description>Provides ability to override number of days calculation</description>
    <inlineHelpText>Provides ability to override number of days calculation</inlineHelpText>
    <label>Days Worked Override</label>
    <precision>8</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>