unpackaged/main/default/objects/pse__Timecard_Header__c/fields/pse__Summed_Total_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>pse__Summed_Total_Billable_Amount__c</fullName>
    <description>Reserved for future use.</description>
    <inlineHelpText>Reserved for future use.</inlineHelpText>
    <label>Summed Total Billable Amount</label>
    <summarizedField>pse__Timecard__c.pse__Total_Billable_Amount__c</summarizedField>
    <summaryForeignKey>pse__Timecard__c.pse__Timecard_Header__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>