unpackaged/main/default/objects/pse__Timecard_Header__c/fields/pse__Sunday_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Sunday_Hours__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Sunday Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>