unpackaged/main/default/objects/pse__Timecard_Header__c/fields/pse__Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>pse__Total_Cost__c</fullName>
    <formula>pse__Cost_Rate_Currency_Code__c &amp; " " &amp; TEXT(IF(pse__Daily_Cost_Rate__c,(pse__Cost_Rate_Amount__c * pse__Total_Days_Worked__c),(pse__Cost_Rate_Amount__c * pse__Total_Hours__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <type>Text</type>
</CustomField>