unpackaged/main/default/objects/pse__Timecard_Header__c/fields/pse__Total_Days_Worked__c.field-meta.xml
<CustomField>
    <fullName>pse__Total_Days_Worked__c</fullName>
    <formula>IF( NOT(ISNULL(pse__Days_Worked_Override__c)),
pse__Days_Worked_Override__c,
IF( NOT(ISNULL(pse__Total_Days_Worked_Advanced__c)),
pse__Total_Days_Worked_Advanced__c,
IF((pse__Sunday_Hours__c&gt;0),1,0) + IF((pse__Monday_Hours__c&gt;0),1,0) + IF((pse__Tuesday_Hours__c&gt;0),1,0) + IF((pse__Wednesday_Hours__c&gt;0),1,0) + IF((pse__Thursday_Hours__c&gt;0),1,0) + IF((pse__Friday_Hours__c&gt;0),1,0) + IF((pse__Saturday_Hours__c&gt;0),1,0)
)
)</formula>
    <label>Total Days Worked</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>