unpackaged/main/default/objects/pse__Timecard_Header__c/fields/pse__Total_Days_Worked_Advanced__c.field-meta.xml
<CustomField>
    <fullName>pse__Total_Days_Worked_Advanced__c</fullName>
    <description>A rollup summary of the total days worked from the time card splits based on the hours to days conversion rules employed.</description>
    <label>Total Days Worked Advanced</label>
    <summarizedField>pse__Timecard__c.pse__Total_Days_Worked__c</summarizedField>
    <summaryForeignKey>pse__Timecard__c.pse__Timecard_Header__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>