unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Revoke_Reason__c.field-meta.xml
<CustomField>
    <fullName>Revoke_Reason__c</fullName>
    <description>Used by Plan D Integration.</description>
    <label>Revoke Reason</label>
    <type>TextArea</type>
</CustomField>