unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Revoked__c.field-meta.xml
<CustomField>
    <fullName>Revoked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Plan D integration.</description>
    <label>Revoked</label>
    <type>Checkbox</type>
</CustomField>