unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Total_Distance__c.field-meta.xml
<CustomField>
    <fullName>Total_Distance__c</fullName>
    <formula>Distance_Monday__c + Distance_Tuesday__c +  Distance_Wednesday__c +  Distance_Thursday__c +  Distance_Friday__c + Distance_Saturday__c +  Distance_Sunday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>