unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Travel_Type__c.field-meta.xml
<CustomField>
    <fullName>Travel_Type__c</fullName>
    <description>Picklist to identify the method of travel used for Travel time</description>
    <inlineHelpText>Picklist to identify the method of travel used for Travel time</inlineHelpText>
    <label>Travel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Car (Mileage)</fullName>
            </value>
            <value>
                <fullName>Plane</fullName>
            </value>
            <value>
                <fullName>Taxi</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>