unpackaged/main/default/objects/pse__Timecard_Header__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Overtime</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Travel - KM/Miles</fullName>
            </value>
            <value>
                <fullName>Standby</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday &amp; Bank Holiday</fullName>
            </value>
            <value>
                <fullName>Overtime + Travel</fullName>
                <isActive>false</isActive>
                <label>Overtime + Travel</label>
            </value>
            <value>
                <fullName>Weekend</fullName>
                <isActive>false</isActive>
                <label>Weekend</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>