unpackaged/main/default/objects/pse__Timecard_Header__c/validationRules/CTC_Weekend_Work_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>CTC_Weekend_Work_Hours</fullName>
    <active>false</active>
    <description>IF weekend hours are included in the time the type must be weekend, and no other hours can be entered against Monday - Friday</description>
    <errorConditionFormula>(ISPICKVAL(Type__c, "Weekend") &amp;&amp; (  pse__Monday_Hours__c &gt;0 ||  pse__Tuesday_Hours__c&gt;0 ||  pse__Wednesday_Hours__c &gt;0 ||  pse__Thursday_Hours__c &gt;0 ||  pse__Friday_Hours__c &gt;0 )) ||  ( (pse__Saturday_Hours__c &gt;0 ||  pse__Sunday_Hours__c &gt;0 ) &amp;&amp; (NOT(ISPICKVAL( Type__c, "Weekend")) &amp;&amp; NOT(ISPICKVAL( Type__c, "Standby"))  ))</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>If weekend hours are entered please ensure the Type is "Weekend" and no hours are entered for Monday-Friday</errorMessage>
</ValidationRule>