unpackaged/main/default/objects/pse__Timecard_Header__c/validationRules/Mixed_Billing_Type_Projects_Require_MS.validationRule-meta.xml
<ValidationRule>
    <fullName>Mixed_Billing_Type_Projects_Require_MS</fullName>
    <active>false</active>
    <description>Mixed Billing type project's timecards require a Milestone to track whether or not the timecard has a Bill Rate or is Zeroed out if the Milestone is Fixed Price</description>
    <errorConditionFormula>ISPICKVAL(pse__Project__r.pse__Billing_Type__c, "Mixed") &amp;&amp;  ISBLANK(pse__Milestone__c )</errorConditionFormula>
    <errorDisplayField>pse__Milestone__c</errorDisplayField>
    <errorMessage>Milestone is required on this Timecard as Project is "Mixed" Billing Type</errorMessage>
</ValidationRule>