unpackaged/main/default/objects/pse__Timecard_Header__c/validationRules/Timecard_Travel_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Timecard_Travel_Check</fullName>
    <active>true</active>
    <description>Validation rule incorporated for submitting travel time with all required information against a timecard record.</description>
    <errorConditionFormula>AND (
ISPICKVAL( Type__c , "Travel - KM/Miles"),
OR (
ISBLANK(Distance_Monday__c) &amp;&amp; pse__Monday_Hours__c &gt;0,
ISBLANK(Distance_Tuesday__c ) &amp;&amp; pse__Tuesday_Hours__c&gt;0,
ISBLANK( Distance_Wednesday__c)&amp;&amp; pse__Wednesday_Hours__c &gt;0,
ISBLANK( Distance_Thursday__c ) &amp;&amp; pse__Thursday_Hours__c &gt;0,
ISBLANK( Distance_Friday__c ) &amp;&amp; pse__Friday_Hours__c &gt;0,
ISBLANK( Distance_Saturday__c ) &amp;&amp; pse__Saturday_Hours__c &gt;0,
ISBLANK( Distance_Sunday__c ) &amp;&amp; pse__Sunday_Hours__c &gt;0

)

)</errorConditionFormula>
    <errorMessage>If you select Travel - KM/Miles as the Type then you must enter the distance travelled for each day.</errorMessage>
</ValidationRule>