unpackaged/main/default/objects/pse__Timecard_Header__c/listViews/BPSC_Timecards.listView-meta.xml
<ListView>
    <fullName>BPSC_Timecards</fullName>
    <columns>NAME</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Assignment__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Total_Hours__c</columns>
    <columns>pse__Milestone__c</columns>
    <columns>pse__Billable__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Approved__c</columns>
    <columns>pse__Exclude_from_Billing__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>pse__Approver__c</columns>
    <columns>pse__Project_Task_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Saved,Submitted,Approved</value>
    </filters>
    <label>BPSC - Timecards</label>
</ListView>