unpackaged/main/default/objects/pse__Timecard_Header__c/listViews/Copy_of_PM_Saved_not_Submitted.listView-meta.xml
<ListView>
    <fullName>Copy_of_PM_Saved_not_Submitted</fullName>
    <columns>NAME</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Assignment__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__Total_Hours__c</columns>
    <columns>pse__Billable__c</columns>
    <columns>pse__Milestone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Submitted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>pse__Approved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Project_Manager_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Saved</value>
    </filters>
    <label>PM - Saved not Submitted</label>
</ListView>